unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/d_wh__Inbound_Call_Action__c.object-meta.xml
<CustomObject>
    <label>Inbound Call Action</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound Call Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>