unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/fields/d_wh__Async_Action__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Async_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Async Action</label>
    <type>Checkbox</type>
</CustomField>