unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/fields/d_wh__Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Flow_Name__c</fullName>
    <label>Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>