unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/fields/d_wh__Guid__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Guid__c</fullName>
    <externalId>true</externalId>
    <label>Guid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>