unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/fields/d_wh__Identify_Object_By_Field__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Identify_Object_By_Field__c</fullName>
    <label>Identify Object By Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>