unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/fields/d_wh__Inbound_Call_Template__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Inbound_Call_Template__c</fullName>
    <label>Inbound Call Template</label>
    <referenceTo>d_wh__Inbound_Call_Template__c</referenceTo>
    <relationshipLabel>Inbound Call Actions</relationshipLabel>
    <relationshipName>Inbound_Call_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>