unpackaged/main/default/objects/d_wh__Inbound_Call_Action__c/fields/d_wh__Update_if_match_found__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Update_if_match_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update if match found</label>
    <type>Checkbox</type>
</CustomField>